Documentation added + Link
- Architecture (Doc)
- Requirements (Doc)
- Use Cases (Doc)
- Tests (Doc)
- Manual (Doc)

- CodeUA (Links)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -640,6 +640,10 @@ section {
   border-color: #2282ff;
 }
 
+.services .icon-box-black:hover {
+  border-color: #000000;
+}
+
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
